bk_ida/gccida/c2/def_cfa_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1161:17: error: expected expression
v2 = *( _OWORD *)&loc_p->reg; 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1161:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&loc_p->reg; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1162:12: error: expected expression
*( _OWORD *)&cfa.base_offset = *( _OWORD *)&loc_p->base_offset; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1162:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.base_offset = *( _OWORD *)&loc_p->base_offset; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1162:43: error: expected expression
*( _OWORD *)&cfa.base_offset = *( _OWORD *)&loc_p->base_offset; 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1162:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.base_offset = *( _OWORD *)&loc_p->base_offset; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1163:12: error: expected expression
*( _OWORD *)&cfa.reg = v2; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1163:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.reg = v2; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1190:14: error: expected expression
*( ( _OWORD *)v12 + 1) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/dwarf2out.c:1190:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v12 + 1) = 0LL; 
     ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/def_cfa_1/src/obj/dwarf2out.o] Error 1
